--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -81,3 +81,5 @@ kFull=Геометрический коэффициент
 authors=Авторы
 normalization=Нормализация
 additive=δₐ (add) [(Ω‧m)⁻¹]
+# Anisotropy
+a.point=Установка с анизотропией
