--- a/src/main/resources/ru/nucodelabs/gem/UI.properties
+++ b/src/main/resources/ru/nucodelabs/gem/UI.properties
@@ -83,3 +83,5 @@ normalization=Нормализация
 additive=δₐ (add) [(Ω‧m)⁻¹]
 # Anisotropy
 a.point=Установка с анизотропией
+openProject=Открыть проект
+saveProject=Сохранить проект
