--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,16 @@ import io.github.fvarrui.javapackager.model.SetupMode
 import io.github.fvarrui.javapackager.model.WindowsExeCreationTool
 import org.gradle.internal.jvm.Jvm
 import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 buildscript {
-    ext.kotlin_version = '1.8.10'
+    ext.kotlinVersion = '1.9.25'
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath "io.github.fvarrui:javapackager:1.7.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -21,10 +22,8 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.11'
-    id "com.google.osdetector" version "1.7.0"
 
     id 'org.jetbrains.kotlin.plugin.lombok' version '1.8.10'
-    id 'io.freefair.lombok' version '5.3.0'
 }
 
 apply plugin: 'io.github.fvarrui.javapackager.plugin'
@@ -33,8 +32,10 @@ apply plugin: 'kotlin'
 group 'ru.nucodelabs'
 version '1.0'
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
+java {
+    sourceCompatibility = JavaVersion.VERSION_19
+    targetCompatibility = JavaVersion.VERSION_19
+}
 
 repositories {
     mavenCentral()
@@ -42,26 +43,41 @@ repositories {
 }
 
 ext {
-    jfxVersion = '19.0.2.1'
+    set 'jfxVersion', '19'
+
     // Platform Info
-    set 'currentOS', DefaultNativePlatform.currentOperatingSystem
-    set 'currentArch', DefaultNativePlatform.currentArchitecture
-    set 'currentOSVer', System.getProperty("os.version").toString()
+    def currentOS = DefaultNativePlatform.currentOperatingSystem
+    def currentArch = DefaultNativePlatform.currentArchitecture
+    def currentOSVer = System.getProperty("os.version").toString()
     javaHome = Jvm.current().javaHome
 
     // For deps
-    osName = currentOS.isWindows() ? "windows" : currentOS.isMacOsX() ? "macosx" : "linux"
-    archName = currentArch.displayName.toLowerCase().contains("arm") ? "arm64" : "x86_64"
+    def osName = currentOS.isWindows() ? "windows" : currentOS.isMacOsX() ? "macosx" : "linux"
+    def archName = currentArch.displayName.toLowerCase().contains("aarch") ? "arm64" : "x86_64"
     set 'platform', "$osName-$archName"
+
+    println "OS:             ${currentOS.name}"
+    println "OS VERSION:     ${currentOSVer}"
+    println "ARCHITECTURE:   ${currentArch.name}"
+    println "CLASSIFIER:     ${platform}"
 
     set 'runDir', "$projectDir/.run"
 }
 
 tasks.register('printPlatformInfo') {
-    println "OS:             ${currentOS.name}"
-    println "OS VERSION:     ${currentOSVer}"
-    println "ARCHITECTURE:   ${currentArch.name}"
-    println "CLASSIFIER:     ${platform}"
+
+}
+
+compileKotlin {
+    compilerOptions {
+        jvmTarget = JvmTarget.JVM_19
+    }
+}
+
+compileTestKotlin {
+    compilerOptions {
+        jvmTarget = JvmTarget.JVM_19
+    }
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -82,47 +98,48 @@ javafx {
 }
 
 dependencies {
+    final junitVersion = '5.9.2'
+    final lombokVersion = '1.18.38'
+    final jacksonVersion = '2.19.2'
+    final kotlinTestVersion = kotlinVersion
+
     implementation files("$projectDir/lib/MathVesJ-1.0.jar")
+
     implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
     implementation 'org.glassfish.expressly:expressly:5.0.0'
-    implementation 'com.github.haifengl:smile-math:2.6.0'
-    implementation 'com.github.haifengl:smile-interpolation:2.6.0'
-    implementation 'com.github.haifengl:smile-core:3.0.1'
-    implementation 'com.github.haifengl:smile-data:2.6.0'
-    implementation 'com.github.haifengl:smile-plot:3.0.1'
-    implementation 'com.github.haifengl:smile-io:2.6.0'
-    implementation "org.bytedeco:openblas:0.3.13-1.5.8:$platform"
-    implementation "org.bytedeco:javacpp:1.5.8:$platform"
-    implementation "org.bytedeco:arpack-ng:3.8.0-1.5.8:$osName-x86_64"
-    implementation "org.bytedeco:arpack-ng:3.8.0-1.5.8"
-    implementation 'org.codehaus.groovy:groovy-all:3.0.16'
+    implementation 'com.github.haifengl:smile-core:4.4.0'
+
+    implementation "org.bytedeco:openblas:0.3.30-1.5.12:$platform"
+    implementation "org.bytedeco:javacpp:1.5.12:$platform"
+    implementation "org.bytedeco:arpack-ng:3.9.1-1.5.12:$platform"
+    implementation "org.bytedeco:arpack-ng:3.9.1-1.5.12"
+
+    implementation 'org.codehaus.groovy:groovy-jsr223:3.0.25'
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    implementation group: 'com.google.inject', name: 'guice', version: '5.1.0'
-    implementation group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '5.1.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-//    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
-    implementation group: 'org.tinfour', name: 'TinfourCore', version: '2.1.7'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.14.2'
+    implementation group: 'com.google.inject', name: 'guice', version: '7.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation group: 'org.tinfour', name: 'TinfourCore', version: '2.1.8'
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
     implementation 'com.github.lilvadim:kfx-utils:0.1.1'
     implementation 'org.apache.commons:commons-collections4:4.4'
 
-    compileOnly 'org.projectlombok:lombok:1.18.26'
-    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    compileOnly 'org.projectlombok:lombok:1.18.38'
+    annotationProcessor 'org.projectlombok:lombok:1.18.38'
 
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
-    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
-//    runtimeOnly("org.jetbrains.kotlin:kotlin-scripting-jsr223:$kotlin_version")
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test:1.8.20-RC'
-    testImplementation "org.openjfx:javafx:${jfxVersion}"
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinTestVersion"
+    testImplementation "org.openjfx:javafx:$jfxVersion"
+
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testImplementation 'io.mockk:mockk:1.13.4'
 
-    testCompileOnly 'org.projectlombok:lombok:1.18.26'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
+    testCompileOnly "org.projectlombok:lombok:$lombokVersion"
+    testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 }
 
 tasks.register('prepareRunDir') {
