--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,10 +27,10 @@ jobs:
           java-version: '19'
           distribution: 'liberica'
           cache: 'gradle'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: packageMacApp
+        run: ./gradlew packageMacApp
       - name: Upload Artifact
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v4
@@ -48,10 +48,10 @@ jobs:
           java-version: '19'
           distribution: 'liberica'
           cache: 'gradle'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: packageWindowsExe
+        run: .\gradlew packageWindowsExe
       - name: Upload Artifact
         if: ${{ github.event_name == 'push' }}
         uses: actions/upload-artifact@v4
