--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,12 @@ import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 buildscript {
-    ext.kotlinVersion = '1.9.25'
+    ext.kotlinVersion = '2.2.0'
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath "io.github.fvarrui:javapackager:1.7.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "io.github.fvarrui:javapackager:1.7.6"
     }
 }
 
@@ -22,12 +21,11 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.11'
-
-    id 'org.jetbrains.kotlin.plugin.lombok' version '1.8.10'
+    id 'org.jetbrains.kotlin.jvm' version '2.2.0'
+    id 'org.jetbrains.kotlin.plugin.lombok' version "$kotlinVersion"
 }
 
 apply plugin: 'io.github.fvarrui.javapackager.plugin'
-apply plugin: 'kotlin'
 
 group 'ru.nucodelabs'
 version '1.0'
