--- a/.github/workflows/gradle_package.yml
+++ b/.github/workflows/gradle_package.yml
@@ -15,7 +15,7 @@ permissions:
   contents: read
 
 jobs:
-  packageMacApp:
+  package_mac_app:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
@@ -35,7 +35,7 @@ jobs:
           name: gem_${{ runner.os }}-${{ runner.arch }}_${{ github.ref_name }}-${{ github.sha }}
           path: build/*.dmg
 
-  packageWindowsExe:
+  package_windows_exe:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
