--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ buildscript {
 }
 
 plugins {
-    id "org.jetbrains.dokka" version "1.6.21"
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.11'
-    id 'org.jetbrains.kotlin.jvm' version '2.2.0'
+    id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion"
     id 'org.jetbrains.kotlin.plugin.lombok' version "$kotlinVersion"
+    id "org.jetbrains.dokka" version "2.0.0"
 }
 
 apply plugin: 'io.github.fvarrui.javapackager.plugin'
