--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,7 @@ jobs:
   gradle_build:
     strategy:
       matrix:
-        os: [ macos-13-large, macos-13-xlarge, windows-2022 ]
+        os: [ macos-13, macos-14, windows-2022 ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
