Fix colormap file handling. Fix version handling

--- a/build.gradle
+++ b/build.gradle
@@ -199,7 +199,7 @@ javapackager {
     organizationName = "NucodeLabs"
     name = "GEM"
     applicationName = "GEM"
-    version = "2.0"
+    version = project.version
     vmArgs = ["-Djava.library.path=."] + moduleExportsJvmArgs
     administratorRequired = false
     additionalResources = [
