--- a/.github/workflows/gradle_package.yml
+++ b/.github/workflows/gradle_package.yml
@@ -8,8 +8,12 @@
 name: Package Distribution with Gradle
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Version"
+        required: false
+        default: SNAPSHOT
 
 permissions:
   contents: read
