--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Create Release
         id: create_release
-        run: hub release create -m "${{ github.ref_name }}" ${{ github.ref_name }}
+        run: gh release create ${{ github.ref_name }} -t "GEM ${{ github.ref_name }}" --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -41,12 +41,6 @@ jobs:
         run: ./gradlew ${{ matrix.configuration.task }} -Pversion=${{ github.ref_name }}
       - name: Upload Asset
         shell: bash
-        run: |
-          set -x
-          assets=()
-          for asset in ${{ matrix.configuration.path }}; do
-            assets+=("-a" "$asset")
-          done
-          hub release edit "${assets[@]}" -m "${{ github.ref_name }}" ${{ github.ref_name }}
+        run: gh release upload ${{ github.ref_name }} ${{ matrix.configuration.path }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
