--- a/.github/workflows/gradle_package.yml
+++ b/.github/workflows/gradle_package.yml
@@ -23,8 +23,8 @@ jobs:
     strategy:
       matrix:
         configuration: [
-          { runner: "macos-13", task: "packageMacApp", path: "build/GEM_*.dmg" },
-          { runner: "macos-14", task: "packageMacApp", path: "build/GEM_*.dmg" },
+          { runner: "macos-13", task: "packageMacApp", path: "build/GEM/*" },
+          { runner: "macos-14", task: "packageMacApp", path: "build/GEM/*" },
           { runner: "windows-2022", task: "packageWindowsExe", path: "build/GEM/*" }
         ]
     runs-on: ${{ matrix.configuration.runner }}
